--- a/.github/workflows/deploy-to-salesforce.yml
+++ b/.github/workflows/deploy-to-salesforce.yml
@@ -28,15 +28,9 @@ jobs:
         run: npm install --global @salesforce/cli
 
       - name: Authenticate to Salesforce via SFDX URL
-        env:
-          SFDX_AUTH_URL: ${{ secrets.SFDX_AUTH_URL }}
         run: |
-          echo "$SFDX_AUTH_URL" > /tmp/sfdx_auth_url.txt
-          sf org login sfdx-url \
-            --sfdx-url-file /tmp/sfdx_auth_url.txt \
-            --alias target-org \
-            --set-default \
-            --instance-url https://storm-1ff54af607dd32.my.salesforce.com
+          echo "${{ secrets.SFDX_AUTH_URL }}" > /tmp/sfdx_auth_url.txt
+          sf org login sfdx-url --sfdx-url-file /tmp/sfdx_auth_url.txt --alias target-org --set-default
           rm /tmp/sfdx_auth_url.txt
 
       - name: Verify org connection
